// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownMenu /> Render a dropdown using custom content should match the snapshot 1`] = `
<React.Fragment>
  <span>
    <styled.span
      aria-expanded={false}
      aria-haspopup={true}
      innerRef={
        Object {
          "current": null,
        }
      }
      onClick={[Function]}
      role="button"
    >
      <styled.button>
        <FontAwesomeIcon
          type="ellipsis-v"
        />
      </styled.button>
    </styled.span>
  </span>
  <ManualMenu
    dropdownAnchorPosition="auto"
    id=""
    isDropdownOpen={false}
    onDropdownClose={[Function]}
    parentAnchorPosition="auto"
    parentRef={
      Object {
        "current": null,
      }
    }
  />
</React.Fragment>
`;

exports[`<DropdownMenu /> Simple dropdown behaviour should match the snapshot 1`] = `
<React.Fragment>
  <span>
    <styled.span
      aria-expanded={false}
      aria-haspopup={true}
      innerRef={
        Object {
          "current": null,
        }
      }
      onClick={[Function]}
      role="button"
    >
      <styled.button>
        <FontAwesomeIcon
          type="ellipsis-v"
        />
      </styled.button>
    </styled.span>
  </span>
  <ManualMenu
    dropdownAnchorPosition="auto"
    id=""
    isDropdownOpen={false}
    onDropdownClose={[Function]}
    parentAnchorPosition="auto"
    parentRef={
      Object {
        "current": null,
      }
    }
    sections={
      Array [
        Object {
          "text": "Item 1",
        },
        Object {
          "href": "https://www.intellihr.com.au",
          "text": "Item 2",
        },
      ]
    }
  />
</React.Fragment>
`;
